--- a/Andriod/app/src/main/AndroidManifest.xml
+++ b/Andriod/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service android:name=".BatteryReadService"/>
+
     </application>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
 </manifest>
